同言网第二次改动
加了后台功能模块，测试通过一个一个分别加功能(原模板JS显示问题还是有问题)后台功能模块写到学校查看学生报名信息，没有加分页功能，模板没有加JS验证。

--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -55,7 +55,7 @@
               </div>
             </div>
           </div> #}
-      {% if setting('copyright.thirdCopyright')|default(null) != 1 %}
+      {#{% if setting('copyright.thirdCopyright')|default(null) != 1 %}
         <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-heading">
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-      {% endif %}
+      {% endif %}#}
       <div id="popular-courses-panel" class="col-md-6">
         <div class="panel panel-default">
           <div class="panel-heading">
