--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/whole/user-table-tr.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/whole/user-table-tr.html.twig
@@ -69,8 +69,8 @@
   </td>
   <td>
     <div class="btn-group">
-      <a href="#modal" data-toggle="modal" data-url="{{ path('admin_user_show', {id:user.id}) }}" data-url="" class="btn btn-default btn-sm">查看</a>
-     {% include 'PermissionBundle:Templates:group-button.html.twig' with {parentCode: 'admin_user_manage', group:'groupButton', user: user} %}
+      <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_whole_show', {id:user.id}) }}" data-url="" class="btn btn-default btn-sm">查看</a>
+      {% include 'PermissionBundle:Templates:new-group-button.html.twig' with {parentCode: 'newadmin_whole_manage', group:'groupButton', user: user} %}
     </div>
   </td>
 </tr>
