--- a/htdocs/src/Topxia/AdminBundle/Resources/views/new-layout.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/new-layout.html.twig
@@ -54,10 +54,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{ url('admin') }}">{% if not setting('copyright.owned') %}同言{% endif %}{{'管理后台'|trans}}</a>
+        <a class="navbar-brand" href="{{ url('newadmin') }}">{% if not setting('copyright.owned') %}同言{% endif %}{{'管理后台'|trans}}</a>
       </div>
       <div class="navbar-collapse collapse">
-        {% include 'PermissionBundle:Templates:navigation.html.twig' with {parentCode:'newadmin'} %}
+        {% include 'PermissionBundle:Templates:new-navigation.html.twig' with {parentCode:'newadmin'} %}
 
         <ul class="nav navbar-nav navbar-right">
           <li data-url="{{path('admin_common_admin')}}">
