--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/whole/index.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/whole/index.html.twig
@@ -2,7 +2,7 @@
 
 {% set menu = 'newadmin_whole_manage' %}
 
-{% set script_controller = 'user/list' %}
+{% set script_controller = 'background/newlist' %}
 
 {% block main %}
 
