--- a/htdocs/src/Permission/PermissionBundle/Resources/views/Templates/new-group-button.html.twig
+++ b/htdocs/src/Permission/PermissionBundle/Resources/views/Templates/new-group-button.html.twig
@@ -1,4 +1,4 @@
-{% import "PermissionBundle:Templates:macro.html.twig" as self_macro %}
+{% import "PermissionBundle:Templates:new-macro.html.twig" as self_macro %}
 
 {% set permissions = sub_permissions(parentCode, group|default(null)) %}
 
