--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/messagesc.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/messagesc.html.twig
@@ -1,10 +1,40 @@
-{% extends 'TopxiaAdminBundle::new-layout.html.twig' %}
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
 {% set menu = 'newadmin_messagesc' %}
 
 {% block main %}
   <div class="well well-sm">
-    <a href="{{ url('newadmin') }}">亲，该功能正在开发中...点击返回后台管理首页面</a>
+   <table id="student-enrollstat-table" class="table table-striped table-hover" data-search-form="#school-searchSt-form">
+  <thead>
+    <tr>
+      <th>{{'学校中文名'|trans}}</th>
+      <th>{{'学校类型'|trans}}</th>
+      <th>{{'学校创办时间'|trans}}</th>
+      <th>{{'学校地址'|trans}}</th>
+      <th>{{'学校或机构'|trans}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% if schools %}
+      {% for school in schools %}
+        <tr>
+          <td>{{ school.chineseName|default('') }}</td>
+          <td>{{ school.type|default('') }}</td>
+          <td>{{ school.startTime is empty ? "" : school.startTime|date("Y-m-d ") }}</td>
+          <td>{{ school.schoolAddress|slice(0, 12)}}</td>
+          <td>
+            {% if school.institutionsType == 0 %}
+             {{ '学校'|default('') }}</td>
+            {% else %}
+             {{ '培训机构'|default('') }}</td>
+            {% endif %}
+            </td>
+            <td><a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_show', {id:school.id}) }}" class="btn btn-default btn-sm">查看</a></td>
+        </tr>
+      {% endfor %}
+    {% endif %}
+  </tbody>
+</table>
   </div>
 
 {% endblock %}
