--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/student/enroll.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/student/enroll.html.twig
@@ -5,12 +5,12 @@
 {% set script_controller = 'teacher/teacher-list' %}
 
 {% block main %}
-<form id="school-searchSt-form" class="form-inline well well-sm" action="" method="get" novalidate>
+{#<form id="school-searchSt-form" class="form-inline well well-sm" action="" method="get" novalidate>
   <div class="form-group">
     <input type="text" name="nickname" class="form-control" value="" placeholder="{{'姓名'|trans}}">
   </div>
   <button class="btn btn-primary">{{'搜索'|trans}}</button>
-</form>
+</form>#}
 <table id="student-enrollstat-table" class="table table-striped table-hover" data-search-form="#school-searchSt-form">
   <thead>
     <tr>
