同言网第四次改动
学校注册认证上传图片功能已完成，现在差前台学校课程加入口学生报学校，前台AJAX，后台管理员登录功能和模板。

--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/authentication-add.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/authentication-add.html.twig
@@ -15,7 +15,7 @@ with {class:'panel-col'} %}#} {% block heading %}添加学校认证信息表{% e
 <div class="form-group">
     <label class="col-md-2 control-label">{{'民办非企业登记证书'|trans}}</label>
     <div class="col-md-7 controls radios">
-       
+        <a href="#modal" data-toggle="modal" data-url="{{path('newadmin_school_uploadCer', {id: user.id})}}" class="btn btn-default btn-sm">查看</a>
         <input type="text" id="schoolAuth_registerCertificate" name="schoolAuth[registerCertificate]" class="form-control" data-widget-cid="widget-1"
             data-explain="" value="{{ schoolAuth.registerCertificate|default('') }}" />
         <div class="help-block" style="display:none;"></div>
