--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/authentication.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/authentication.html.twig
@@ -8,7 +8,7 @@
   <form id="update-schoolAuth-form" class="form-horizontal" method="post">
 
     <div class="form-group">
-        <label class="col-md-2 control-label">更新学校认证信息表</label>
+        <label class="col-md-2 control-label">更新学校(机构)认证信息表</label>
         <div class="col-md-7 controls radios">
             <div class="help-block" style="display:none;"></div>
 </div>
@@ -18,9 +18,11 @@
 <div class="form-group">
     <label class="col-md-2 control-label">{{'民办非企业登记证书'|trans}}</label>
     <div class="col-md-7 controls radios">
-       <a href="#modal" data-toggle="modal" data-url="/admin/user/15" class="btn btn-default btn-sm">查看</a>
-        <input type="text" id="schoolAuth_registerCertificate" name="schoolAuth[registerCertificate]" class="form-control" data-widget-cid="widget-1"
+        <img src="{{ filepath(schoolAuth.registerCertificate, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadCer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="hidden" id="schoolAuth_registerCertificate" name="schoolAuth[registerCertificate]" class="form-control" data-widget-cid="widget-1"
             data-explain="" value="{{ schoolAuth.registerCertificate|default('') }}" />
+        <img src="{{ filepath(schoolAuth.registerCertificate, 'avatar.png') }}" width="120" height="100"/>#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -29,8 +31,10 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'办学许可证'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_licenseForSchool" name="schoolAuth[licenseForSchool]" class="form-control" value="{{ schoolAuth.licenseForSchool|default('') }}"
-        />
+        <img src="{{ filepath(schoolAuth.licenseForSchool, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadLis', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_licenseForSchool" name="schoolAuth[licenseForSchool]" class="form-control" value="{{ schoolAuth.licenseForSchool|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -39,8 +43,10 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'收费许可证或收费项目公示'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_permitOrProject" name="schoolAuth[permitOrProject]" class="form-control" value="{{ schoolAuth.permitOrProject|default('') }}"
-        />
+        <img src="{{ filepath(schoolAuth.permitOrProject, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadPer', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_permitOrProject" name="schoolAuth[permitOrProject]" class="form-control" value="{{ schoolAuth.permitOrProject|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -49,8 +55,10 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'年检合格证'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_annuaInspection" name="schoolAuth[annuaInspection]" class="form-control" value="{{ schoolAuth.annuaInspection|default('') }}"
-        />
+          <img src="{{ filepath(schoolAuth.annuaInspection, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadAnn', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_annuaInspection" name="schoolAuth[annuaInspection]" class="form-control" value="{{ schoolAuth.annuaInspection|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -59,8 +67,10 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'招生计划审批表'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_approvalForm" name="schoolAuth[approvalForm]" class="form-control" value="{{ schoolAuth.approvalForm|default('') }}"
-        />
+          <img src="{{ filepath(schoolAuth.approvalForm, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadApp', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_approvalForm" name="schoolAuth[approvalForm]" class="form-control" value="{{ schoolAuth.approvalForm|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -69,8 +79,10 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'特种专业开办许可证'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_specialProfessional" name="schoolAuth[specialProfessional]" class="form-control" value="{{ schoolAuth.specialProfessional|default('') }}"
-        />
+        <img src="{{ filepath(schoolAuth.specialProfessional, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadSpe', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_specialProfessional" name="schoolAuth[specialProfessional]" class="form-control" value="{{ schoolAuth.specialProfessional|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -79,17 +91,19 @@
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'营业执照'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="schoolAuth_businessLicense" name="schoolAuth[businessLicense]" class="form-control" value="{{ schoolAuth.businessLicense|default('') }}"
-        />
+          <img src="{{ filepath(schoolAuth.businessLicense, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadBus', {id: school_id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        {#<input type="text" id="schoolAuth_businessLicense" name="schoolAuth[businessLicense]" class="form-control" value="{{ schoolAuth.businessLicense|default('') }}"
+        />#}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
 
-<div class="row">
+{#<div class="row">
     <div class="col-md-7 col-md-offset-2">
         <button id="schoolAuth-update-btn" data-submiting-text="{{'正在更新'|trans}}" type="submit" class="btn btn-primary">{{'更新'|trans}}</button>
     </div>
-</div>
+</div>#}
 <input type="hidden" id="schoolAuth_id" name="schoolAuth[school_id]" value="{{ school_id|default(0) }}">
 <input type="hidden" id="schoolAuth_type" name="schoolAuth[type]" value="{{ schoolAuth.type|default(0) }}">
 <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
