同言网第五次改动
导航菜单加了判断权限就可以出来了，需要写个登录然后直接跳现在的管理员模板，还差JS验证和原页面用户刷新问题。

--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/course-grid-with-condition-index.html.twig
@@ -4,7 +4,7 @@
   {% set categoryId = config.categoryId|default(0) %}
   {% set orderBy = config.orderBy|default('latest')%}
   {% if orderBy == 'latest'%}
-    {% set courses = data('LatestCourses',{'count':count, 'categoryId':categoryId}}) %}
+    {% set courses = data('LatestCourses',{'count':count, 'categoryId':categoryId, 'school_id':school_id}) %}
   {% elseif orderBy == 'recommendedSeq'%}
     {% set courses = data('RecommendCourses',{'count':count, 'categoryId':categoryId}) %}
   {% elseif orderBy == 'studentNum'%}
@@ -50,6 +50,7 @@
         <a href="javascript:;" class="btn btn-default {% if (orderBy|default('recommendedSeq') == 'recommendedSeq') %} active {% endif %}js-course-filter" data-url="{{path('homepage_category',{categoryId : categoryId|default(0), orderBy : 'recommendedSeq'}) }}" data-type='course'>
           {{'推荐'|trans}}
         </a>
+         <a href="#modal" data-toggle="modal" data-url="{{ path('student_add', {id: school_id}) }}" class="btn btn-default btn-sm" >我要报名该所学校</a>
       </div>
     </div>
     <div class="course-list">
