--- a/htdocs/src/Topxia/WebBundle/Resources/views/Student/add-student.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Student/add-student.html.twig
@@ -1,6 +1,8 @@
-{% extends 'TopxiaWebBundle:Settings:layout.html.twig' %} {% block title %}学生报名学校添加{% endblock %} {% set script_controller=
-'students/add-student' %}{#{% set side_nav = 'schools' %}#} {% block main %} {#左侧菜单{% embed "TopxiaWebBundle:Bootstrap:panel.html.twig"
-with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endblock %} {% block body %}
+{% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
+{% set script_controller='students/add-student' %}
+{% block title %}学生报名学校添加{% endblock %}
+{% block heading %}学生报名学校添加{% endblock %}
+{% block body %}
 
 <form id="add-student-form" class="form-horizontal" method="post">
 
@@ -23,8 +25,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'民族'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="student_nation" name="student[nation]" class="form-control" value=""
-        />
+        <input type="text" id="student_nation" name="student[nation]" class="form-control" value="" />
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -33,8 +34,8 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'生日'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="datetimepicker" name="student[birthday]" class="date" value=""
-         data-date-format="yyyy-mm-dd" />
+        <input type="text" id="datetimepicker" name="student[birthday]" class="date" value="" data-date-format="yyyy-mm-dd" />
+        {{ '格式为yyyy-mm-dd' }}
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -43,7 +44,8 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
 <div class="form-group form-forIam-group form-notStudent-group">
     <label class="col-md-2 control-label">{{'身高'|trans}}</label>
     <div class="col-md-7 controls">
-        <input type="text" id="student_height" name="student[height]" class="form-control" value="{{ student.height|default('') }}" />
+        <input type="text" id="student_height" name="student[height]" class="form-control" value="{{ student.height|default('') }}"
+        />
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -65,7 +67,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_phone" name="student[phone]" class="form-control" value="{{ student.phone|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#身份证号码#}
@@ -75,7 +77,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_IDcards" name="student[IDcards]" class="form-control" value="{{ student.IDcards|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#毕业学校#}
@@ -85,7 +87,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_graduateSchool" name="student[graduateSchool]" class="form-control" value="{{ student.graduateSchool|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#准考证号码#}
@@ -95,7 +97,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_admissionTickerNum" name="student[admissionTickerNum]" class="form-control" value="{{ student.admissionTickerNum|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#毕业考试分数#}
@@ -105,7 +107,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_graduationTestScore" name="student[graduationTestScore]" class="form-control" value="{{ student.graduationTestScore|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#地址#}
@@ -115,7 +117,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_address" name="student[address]" class="form-control" value="{{ student.address|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#监护人姓名#}
@@ -125,7 +127,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_guardianName" name="student[guardianName]" class="form-control" value="{{ student.guardianName|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#监护人联系方式#}
@@ -135,7 +137,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_guardianPhone" name="student[guardianPhone]" class="form-control" value="{{ student.guardianPhone|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#所报学校#}
@@ -145,7 +147,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_reportedSchool" name="student[reportedSchool]" class="form-control" value="{{ student.reportedSchool|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 {#所报课程#}
@@ -155,7 +157,7 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
         <input type="text" id="student_reportedCourse" name="student[reportedCourse]" class="form-control" value="{{ student.reportedCourse|default('') }}"
         />
         <div class="help-block" style="display:none;"></div>
-    </div>
+</div>
 </div>
 
 <div class="row">
@@ -166,5 +168,4 @@ with {class:'panel-col'} %}#} {% block heading %}学生报名学校添加{% endb
 <input type="hidden" id="schools_id" name="schools[id]" value="{{ school.id|default('') }}">
 <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 </form>
-
-{% endblock %} {% endblock %}
+<button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{'关闭'|trans}}</button> {% endblock %} 
