同言网第六次改动
登录和注册用了新的模板和控制器，原来的页面应同言要求隐藏，给他们个路径登录就行，改了安全配置文件测试注册登录跳转功能成功。

--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/old-index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/old-index.html.twig
@@ -49,7 +49,7 @@
 					</div>
 				</form>
 				</div>
-				<div class="col-md-4">会员登录</div>
+				<div class="col-md-4"><a href="{{ path('login_background') }}">{{'会员登录'|trans}}</a></div>
 				<div class="col-md-4">收藏夹</div>
 				</div>
 			</div>
