同言网第六次提交
登录和注册用了新的模板和控制器，原来的页面应同言要求隐藏，给他们个路径登录就行，改了安全配置文件测试注册登录跳转功能成功。首页其它人群分类已加好显示数据

--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/registersc.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/registersc.html.twig
@@ -17,6 +17,16 @@
 
  {{ web_macro.flash_messages() }}
 
+{#学校图片#}
+<div class="form-group">
+    <label class="col-md-2 control-label">{{'学校图片'|trans}}</label>
+    <div class="col-md-7 controls radios">
+        <img src="{{ filepath(schools.largePicture, 'avatar.png') }}" width="120" height="100"/>
+        <a href="#modal" data-toggle="modal" data-url="{{ path('newadmin_school_uploadSch', {id: schools.id}) }}" class="btn btn-default btn-sm">查看/上传图片</a>
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
 {#中文名称#}
 <div class="form-group">
     <label class="col-md-2 control-label">{{'中文名称'|trans}}</label>
