--- a/htdocs/src/Topxia/WebBundle/Resources/views/Course/Part/normal-sidebar-belong-classrooms.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Course/Part/normal-sidebar-belong-classrooms.html.twig
@@ -1,4 +1,4 @@
-{% if classrooms %}
+{#{% if classrooms %}
   <div class="panel panel-default belongs-class">
     <div class="panel-heading">
       <h3 class="panel-title"> <i class="es-icon es-icon-locallibrary"></i>
@@ -18,4 +18,4 @@
       {% endfor %}
     </div>
   </div>
-{% endif %}
+{% endif %}#}
