--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/wx-course-grid-with-condition-index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/wx-course-grid-with-condition-index.html.twig
@@ -4,7 +4,7 @@
   {% set categoryId = config.categoryId|default(0) %}
   {% set orderBy = config.orderBy|default('latest')%}
   {% if orderBy == 'latest'%}
-    {% set courses = data('LatestCourses',{'count':count, 'categoryId':categoryId, 'school_id':school_id}) %}
+    {% set courses = data('LatestCourses',{'count':count, 'categoryId':categoryId}) %}
   {% elseif orderBy == 'recommendedSeq'%}
     {% set courses = data('RecommendCourses',{'count':count, 'categoryId':categoryId}) %}
   {% elseif orderBy == 'studentNum'%}
