--- a/htdocs/src/Topxia/WebBundle/Resources/views/old-layout.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/old-layout.html.twig
@@ -1,4 +1,4 @@
-{#{% import "TopxiaWebBundle::macro.html.twig" as web_macro %}#}
+{% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
@@ -21,8 +21,13 @@
   <meta content="{{ csrf_token('site') }}" name="csrf-token" />
   <meta content="{{ app.user.isLogin()|default(0) }}" name="is-login" />
   <meta content="{{ setting('login_bind.weixinmob_enabled')|default(0) }}" name="is-open" />
+  {{ setting('login_bind.verify_code', '')|raw }}
+  {% if setting('site.favicon') %}
+  <link rel="icon" href="{{ asset(setting('site.favicon')) }}" type="image/x-icon" />
+  <link rel="shortcut icon" href="{{ asset(setting('site.favicon')) }}" type="image/x-icon" media="screen"/>
+  {% endif %}
   <!-- Bootstrap -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
 	<link href="assets/css/mouyong_index.css" rel="stylesheet" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,6 +40,9 @@
     	.down-10{
     		margin-top: 10px;
     	}
+      .down-5{
+        margin-top: 5px;
+      }
     	
     </style>
   {{ setting('login_bind.verify_code', '')|raw }}
@@ -77,9 +85,9 @@
       {#{% block bottom_content %}{% endblock %}#}
     {% endblock %}
 
-    {#{% block footer %}
+    {% block footer %}
       {% include 'TopxiaWebBundle:Default:footer.html.twig' %}
-    {% endblock %}#}
+    {% endblock %}
 
     {#{% block bottom %}{% endblock %}#}
   </div>
