--- a/htdocs/web/assets/v2/bootstrap/css/bootstrap.css
+++ b/htdocs/web/assets/v2/bootstrap/css/bootstrap.css
@@ -4295,8 +4295,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   cursor: default;
   color: #fff;
-  background-color: #46c37b;
-  border-color: #34a263;
+  background-color: #e50011;
+  border-color: #e83227;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
