--- a/htdocs/src/Topxia/WebBundle/Resources/views/Article/Widget/tag-sidebar.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Article/Widget/tag-sidebar.html.twig
@@ -1,4 +1,4 @@
-{% set tags = data('Tags',{'count':12}) %}
+{#{% set tags = data('Tags',{'count':12}) %}
 {% if tags %}
   <div class="panel panel-default hot-tag">
     <div class="panel-heading">
@@ -12,4 +12,4 @@
       {% endfor %}
     </div>
   </div>
-{% endif %}
+{% endif %}#}
